--- a/css/style.css
+++ b/css/style.css
@@ -31,27 +31,34 @@ img {
 }
 
 
-/*-----Estilos del Banner-----*/
+/*-----Estilos del Header-----*/
 
-.banner {
-    margin-top: -60px;
-    position: relative;
-    z-index: -1000;
-    margin-bottom: 20px;
+.header {
+    height: 60px;
 }
 
-.banner .contenedor {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    width: 100%;
+.header .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo,
+.icon-menu {
+    margin: 5px;
     color: #fff;
-    text-align: center;
 }
 
-.banner__txt {
-    display: none;
+.icon-menu {
+    display: block;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    background: #fba919;
+    text-align: center;
+    line-height: 45px;
+    border-radius: 5px;
+    margin-left: auto;
+    cursor: pointer;
 }
 
 
@@ -75,4 +82,106 @@ img {
     display: block;
     padding: 15px;
     background: #fba919;
+    text-decoration: none;
+    color: #fff;
+}
+
+.menu__link:hover,
+.select {
+    background: #fff;
+    color: #fba919;
+}
+
+.mostrar {
+    left: 0;
+}
+
+
+/*-----Estilos del Banner-----*/
+
+.banner {
+    margin-top: -60px;
+    position: relative;
+    z-index: -1000;
+    margin-bottom: 20px;
+}
+
+.banner__img {
+    width: 100%;
+}
+
+.banner .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 100%;
+    color: #fff;
+    text-align: center;
+}
+
+.banner__txt {
+    display: none;
+}
+
+.banner__titulo {
+    color: #fba919;
+    border: 1px;
+    border-color: #fff;
+}
+
+
+/*-----Estilos de Adopciones-----*/
+
+.adopciones__columna {
+    background: #fba919;
+    color: #fff;
+    padding: 15px;
+    margin-bottom: 30px;
+}
+
+
+/*-----Estilos de Trabajadores-----*/
+
+.trabajadores__columna {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.trabajadores__descripcion {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.5);
+    width: 60%;
+    height: 100%;
+    padding: 5px;
+}
+
+.trabajadores__titulo {
+    font-size: 25px;
+    margin: 5px 0;
+}
+
+
+/*-----Estilos de footer-----*/
+
+.footer {
+    background: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+.footer .social [class^="icon-"] {
+    display: inline-block;
+    color: #333;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 10px;
+    background: #fff;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
