--- a/css/style.css
+++ b/css/style.css
@@ -1,187 +1,195 @@
-@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Yanone+Kaffeesatz&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Pacifico&display=swap');
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+}
+
+
+/*------------------------------------------------Estilos base------------------------------------------------*/
+
+img {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: 'Yanone Kaffesatz', sans-serif;
-    letter-spacing: 1.5px;
-}
-
-body {
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
 }
 
-* {
-    box-sizing: border-box;
+.container {
+    width: 100%;
+    margin: auto;
 }
 
-img {
+.container--flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.column {
+    width: 100%;
+}
+
+
+/*------------------------------------------------Estilos header------------------------------------------------*/
+
+.main-header {
+    width: 100%;
+}
+
+.logo {
+    font-size: 1.8em;
+    color: #de423a;
+    padding: 10px;
+    font-family: 'Pacifico', cursive;
+    font-weight: 100;
+}
+
+.main-header__contactInfo__phone {
+    background: #de423a;
+    color: #fff;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.main-header__contactInfo__address {
+    padding: 10px;
+    margin: 0;
+}
+
+.main-header [class*="icon-"]:before {
+    position: relative;
+    top: 2px;
+    right: 5px;
+}
+
+.icon-phone img,
+.icon-location img {
+    width: 35px;
+    height: 35px;
+}
+
+
+/*------------------------------------------------Estilos menu------------------------------------------------*/
+
+.main-nav {
+    width: 100%;
+    position: relative;
+    z-index: 2000;
+    padding: 10px;
+}
+
+.icon-menu {
     display: block;
-    max-width: 100%;
-}
-
-.section__titulo {
+    color: #fff;
+    border: 1px solid white;
+    border-radius: 3px;
+    width: 40px;
+    height: 40px;
+    line-height: 45px;
     text-align: center;
-    font-size: 40px;
-    color: #fba919;
+    cursor: pointer;
+    font-size: 1.5em;
 }
 
-
-/*-----Estilos del Header-----*/
-
-.header {
-    height: 60px;
-}
-
-.header .container {
+.social-icon {
     display: flex;
     justify-content: space-between;
 }
 
-.logo,
-.icon-menu {
-    margin: 5px;
-    color: #fff;
+.social-icon [class*="icon-"] {
+    color: black;
+    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.3em;
+    width: 35px;
+    height: 35px;
+    background: white;
+    border-radius: 50%;
 }
 
-.icon-menu {
-    display: block;
-    width: 40px;
-    height: 40px;
-    font-size: 30px;
-    background: #fba919;
-    text-align: center;
-    line-height: 45px;
-    border-radius: 5px;
-    margin-left: auto;
-    cursor: pointer;
-}
-
-
-/*-----Estilos del Menu-----*/
-
-.nav {
-    position: absolute;
-    top: 60px;
-    left: -100%;
-    width: 100%;
-    transition: all 0.4s;
+.social-icon__link {
+    text-decoration: none;
 }
 
 .menu {
-    list-style: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.85);
     padding: 0;
     margin: 0;
+    list-style: none;
+    text-align: center;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s linear;
 }
 
 .menu__link {
     display: block;
     padding: 15px;
-    background: #fba919;
+    color: white;
     text-decoration: none;
-    color: #fff;
 }
 
-.menu__link:hover,
-.select {
-    background: #fff;
-    color: #fba919;
+.menu__link--select,
+.menu__link:hover {
+    background: #de423a;
 }
 
 .mostrar {
-    left: 0;
+    height: 196px;
 }
 
 
-/*-----Estilos del Banner-----*/
+/*------------------------------------------------Estilos banner------------------------------------------------*/
 
 .banner {
-    margin-top: -60px;
+    margin-top: -70px;
     position: relative;
-    z-index: -1000;
-    margin-bottom: 20px;
+}
+
+.banner:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+    top: 0;
 }
 
 .banner__img {
     width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
 
-.banner .container {
+.banner__content {
+    width: 90%;
+    color: white;
+    text-align: center;
     position: absolute;
+    z-index: 1500;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    width: 100%;
-    color: #fff;
-    text-align: center;
-}
-
-.banner__txt {
-    display: none;
-}
-
-.banner__titulo {
-    color: #fba919;
-    border: 1px;
-    border-color: #fff;
-}
-
-
-/*-----Estilos de Adopciones-----*/
-
-.adopciones__columna {
-    background: #fba919;
-    color: #fff;
-    padding: 15px;
-    margin-bottom: 30px;
-}
-
-
-/*-----Estilos de Trabajadores-----*/
-
-.trabajadores__columna {
-    position: relative;
-    margin-bottom: 30px;
-}
-
-.trabajadores__descripcion {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.5);
-    width: 60%;
-    height: 100%;
-    padding: 5px;
-}
-
-.trabajadores__titulo {
-    font-size: 25px;
-    margin: 5px 0;
-}
-
-
-/*-----Estilos de footer-----*/
-
-.footer {
-    background: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-}
-
-.footer .social [class^="icon-"] {
-    display: inline-block;
-    color: #333;
-    text-decoration: none;
-    font-size: 30px;
-    padding: 10px;
-    background: #fff;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    font-size: 1.5em;
+    font-weight: bold;
 }
