--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,9 @@ h6 {
         padding-left: 20px;
         font-size: .9em;
     }
+    .main__about__description .column--50:nth-child(2) .column__txt {
+        line-height: 40px;
+    }
     .main__about__description .btn {
         margin: 0;
     }
@@ -468,7 +471,7 @@ h6 {
     }
     .main__about__description .column:nth-child(1) img {
         width: 100%;
-        height: 600px;
+        height: 800px;
         object-fit: cover;
     }
     .today-special__img {
