--- a/css/contacto.css
+++ b/css/contacto.css
@@ -59,8 +59,12 @@
     font-size: 1em;
 }
 
+input:valid {
+    border: 1px solid black;
+}
+
 input:invalid {
-    border: 2px solid red;
+    border: 1px solid red;
 }
 
 @media screen and (min-width:480px) {
